fix(dropdown): increase `z-index`

--- a/src/sass/settings/_dropdown.scss
+++ b/src/sass/settings/_dropdown.scss
@@ -25,4 +25,4 @@ $dropdown-box-shadow: (
 ) !default;
 
 // Set dropdown z-index.
-$dropdown-index: 1 !default;
+$dropdown-index: 3 !default;
